<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.terrydr.eyeScope.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/shareQQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/shareWXMoments"
        android:layout_below="@+id/shareWXMoments"
        android:layout_marginTop="28dp"
        android:text="@string/shareQQ" />

    <Button
        android:id="@+id/shareQQZone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/shareQQ"
        android:layout_below="@+id/shareQQ"
        android:layout_marginTop="34dp"
        android:text="@string/shareQQZone" />

    <Button
        android:id="@+id/shareWXMoments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shareWXFriend"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/shareWXMoments" />

    <Button
        android:id="@+id/shareWXFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/shareWXMoments"
        android:layout_below="@+id/textView1"
        android:text="@string/shareWXFriend" />

</RelativeLayout>